@@ -31,24 +31,23 @@ kotlin {
 
         val main by compilations.getting {
             compileKotlinTask.destinationDirectory.set(compileJavaTaskProvider!!.get().destinationDirectory.asFile.get())
+
+            compileJavaTaskProvider!!.get().run {
+                doFirst {
+                    options.compilerArgs.addAll(
+                        listOf(
+                            "--module-path", classpath.asPath,
+                            "--add-modules", "arrow.core.jvm,kotlinx.coroutines.core.jvm",
+                            "--patch-module", "arrow.core.jvm=arrow-core-jvm-1.1.2.jar",
+                            "--patch-module", "kotlinx.coroutines.core.jvm=kotlinx-coroutines-core-jvm-1.6.4.jar"
+                        )
+                    )
+
+                    classpath = files()
+                }
+            }
         }
     }
-//    js(BOTH) {
-//        browser {
-//            commonWebpackConfig {
-//                cssSupport.enabled = true
-//            }
-//        }
-//    }
-//    val hostOs = System.getProperty("os.name")
-//    val isMingwX64 = hostOs.startsWith("Windows")
-//    val nativeTarget = when {
-//        hostOs == "Mac OS X" -> macosX64("native")
-//        hostOs == "Linux" -> linuxX64("native")
-//        isMingwX64 -> mingwX64("native")
-//        else -> throw GradleException("Host OS is not supported in Kotlin/Native.")
-//    }
-
 
     sourceSets {
         val commonMain by getting {
@@ -56,6 +55,8 @@ kotlin {
                 implementation(kotlin("stdlib"))
                 implementation(kotlin("reflect"))
                 implementation(project(":"))
+                implementation("io.arrow-kt:arrow-core:1.1.2")
+
                 implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
             }
         }
